Overview of changes in Glib::Object::Introspection 0.011
========================================================

* Improve handling of boxed unions, like GdkEvent.
* Add support for building the test libs on MSWin32.
* Properly specify our dependencies.

Overview of changes in Glib::Object::Introspection 0.010
========================================================

* Correctly place the linker flags when building the test libs.
* Fix compilation of the test libs against recent gobject-introspection
* updated README file similar to Cairo (RT#74870)
* Created %meta_merge which follows v2 of meta-spec

Overview of changes in Glib::Object::Introspection 0.009
========================================================

* Allow setting boxed fields to undef.
* Do not pass on an incorrect destroy notify func if there is no
  callback.
* Do not crash on inexistent GTypes on perl 5.8.x.

Overview of changes in Glib::Object::Introspection 0.008
========================================================

* When looking up GTypes, also try by name.
* Make constants work on perl 5.8.x.

Overview of changes in Glib::Object::Introspection 0.007
========================================================

* Do not assume filenames are UTF8-encoded; pass the strings on unaltered in
  both directions, C to Perl and Perl to C.  Before passing a filename on to
  something which expects UTF8 (like widgets), users now have to ensure that it
  is UTF8-encoded.  Glib::filename_to_unicode provides one way to do this.

Overview of changes in Glib::Object::Introspection 0.006
========================================================

* Remove an unneeded argument of an internal function
* Plug a leak in the wrapper for constants
* Fix compilation of the test lib on x86-64

Overview of changes in Glib::Object::Introspection 0.005
========================================================

* Use the overloaded '==' operator directly when comparing flags
* Make t/enums.t more robust