@@ -9,4 +9,5 @@ Makefile$
 Makefile\.old$
 MYMETA\..*$
 GObjectIntrospection.c$
+TAGS
 \.o$
