@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::Depends: 0.3
   ExtUtils::PkgConfig: 1
-  Glib: 1.24
+  Glib: 1.27
 dynamic_config: 1
 generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
 license: lgpl
@@ -23,10 +23,12 @@ no_index:
   package:
     - MY
     - Glib::Object::Introspection::_FuncWrapper
+requires:
+  Glib: 1.27
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Glib-Object-Introspection
   homepage: http://gtk2-perl.sourceforge.net
   license: http://www.gnu.org/licenses/lgpl-2.1.html
   repository: git://git.gnome.org/perl-Glib-Object-Introspection
   x_MailingList: https://mail.gnome.org/mailman/listinfo/gtk-perl-list
-version: 0.011
+version: 0.012
